--- a/style.css
+++ b/style.css
@@ -416,6 +416,7 @@
     grid-template-columns: 1fr;
     gap: 24px;
     padding-block: 40px;
+    padding-bottom: 40px;
   }
   
   .skills__item {
@@ -475,6 +476,7 @@
   
   .projects__wrapper {
     padding-bottom: 140px;
+    padding-top: 140px;
   }
   
   .projects__grid {
